<resources>
    <string name="app_name">Kirill</string>
    <string name="login_in">Login in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Register</string>
    <string name="new_account">New account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="user_main">User Main</string>
    <string name="example_example_com">example@example.com</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="del_item">Delete city</string>
    <string name="city_title">Book Title</string>
    <string name="back">Back</string>
    <string name="city_info">Book Info</string>
    <string name="example_description">The description of the game.</string>
    <string name="user_profile">Profile</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="favorite_color">Favorite color</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="save_changes">Save changes</string>
    <string name="male">Male</string>
    <string name="favorite_food">Favorite food</string>
    <string name="favorite_city">Favorite city</string>
    <string name="favorite_country">Favorite country</string>
    <string name="title">Title</string>
</resources>