<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools "
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".GameDetailsActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/black" />

        <!--Title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </RelativeLayout>

    <!--All content under scrollview-->
    <ScrollView
        android:layout_below="@id/toolbarRl"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:text="@string/example_description"
                android:textColor="@color/black"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagesViewer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/featureBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:text="Add To Featured"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
